--- a/packages/intersection-observer-ref/package.json
+++ b/packages/intersection-observer-ref/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "A hook to register an intersection observer listener",
   "name": "@rooks/use-intersection-observer-ref",
-  "homepage": "https://react-hooks.org/?path=/story/useintersectionobserverref--basic-example",
+  "homepage": "https://stories.react-hooks.org/?path=/story/useintersectionobserverref--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
