--- a/packages/mutation-observer/package.json
+++ b/packages/mutation-observer/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "A React Hooks package for mutation-observer",
   "name": "@rooks/use-mutation-observer",
-  "homepage": "https://react-hooks.org/?path=/story/usemutationobserver--basic-example",
+  "homepage": "https://stories.react-hooks.org/?path=/story/usemutationobserver--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
