--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for worker",
   "name": "@rooks/use-worker",
-  "homepage": "https://react-hooks.org/?path=/story/useworker--basic-example",
+  "homepage": "https://stories.react-hooks.org/?path=/story/useworker--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
