--- a/packages/did-mount/package.json
+++ b/packages/did-mount/package.json
@@ -30,7 +30,7 @@
     "componentDidMount",
     "lifecycle"
   ],
-  "version": "3.5.1-canary.20",
+  "version": "3.5.1",
   "_id": "@rooks/use-did-mount@",
   "publishConfig": {
     "access": "public"
