--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -29,7 +29,7 @@
     "window",
     "scroll"
   ],
-  "version": "3.5.1-canary.20",
+  "version": "3.5.1",
   "publishConfig": {
     "access": "public"
   },
