--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -28,7 +28,7 @@
     "rooks",
     "input hook"
   ],
-  "version": "3.5.1",
+  "version": "3.5.2-canary.0",
   "_id": "@rooks/use-input@",
   "publishConfig": {
     "access": "public"
