--- a/packages/mouse/package.json
+++ b/packages/mouse/package.json
@@ -29,7 +29,7 @@
     "mouse",
     "mouse hook"
   ],
-  "version": "3.5.1",
+  "version": "3.5.2-canary.0",
   "_id": "@rooks/use-mouse@",
   "publishConfig": {
     "access": "public"
