--- a/packages/online/package.json
+++ b/packages/online/package.json
@@ -29,7 +29,7 @@
     "online status",
     "online status hook"
   ],
-  "version": "3.5.1",
+  "version": "3.5.2-canary.0",
   "_id": "@rooks/use-online@",
   "publishConfig": {
     "access": "public"
