--- a/packages/boundingclientrect/package.json
+++ b/packages/boundingclientrect/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.6.1-canary.2",
+  "version": "3.6.1-3.6.1-canary.4.0",
   "_id": "@rooks/use-boundingclientrect@",
   "publishConfig": {
     "access": "public"
