--- a/packages/did-update/package.json
+++ b/packages/did-update/package.json
@@ -27,7 +27,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.6.1-canary.2",
+  "version": "3.6.1-3.6.1-canary.4.0",
   "_id": "@rooks/use-did-update@",
   "publishConfig": {
     "access": "public"
