--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -28,7 +28,7 @@
     "rooks",
     "input hook"
   ],
-  "version": "3.6.1-canary.2",
+  "version": "3.6.1-3.6.1-canary.4.0",
   "_id": "@rooks/use-input@",
   "publishConfig": {
     "access": "public"
