--- a/packages/isomorphic-effect/package.json
+++ b/packages/isomorphic-effect/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "3.6.1-canary.2",
+  "version": "3.6.1-3.6.1-canary.4.0",
   "_id": "@rooks/use-isomorphic-effect@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
