--- a/packages/mouse/package.json
+++ b/packages/mouse/package.json
@@ -29,7 +29,7 @@
     "mouse",
     "mouse hook"
   ],
-  "version": "3.6.1-canary.2",
+  "version": "3.6.1-3.6.1-canary.4.0",
   "_id": "@rooks/use-mouse@",
   "publishConfig": {
     "access": "public"
