--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "ref outside click"
   ],
-  "version": "3.6.1-canary.2",
+  "version": "3.6.1-3.6.1-canary.4.0",
   "_id": "@rooks/use-outside-click@",
   "publishConfig": {
     "access": "public"
