--- a/packages/interval/package.json
+++ b/packages/interval/package.json
@@ -29,7 +29,7 @@
     "setInterval",
     "interval"
   ],
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "_id": "@rooks/use-interval@",
   "publishConfig": {
     "access": "public"
