--- a/packages/navigator-language/package.json
+++ b/packages/navigator-language/package.json
@@ -29,7 +29,7 @@
     "navigator language",
     "navigator language hook"
   ],
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "_id": "@rooks/use-navigator-language@",
   "publishConfig": {
     "access": "public"
