--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -29,7 +29,7 @@
     "window",
     "scroll"
   ],
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "publishConfig": {
     "access": "public"
   },
