--- a/packages/online/package.json
+++ b/packages/online/package.json
@@ -29,7 +29,7 @@
     "online status",
     "online status hook"
   ],
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "_id": "@rooks/use-online@",
   "publishConfig": {
     "access": "public"
