--- a/packages/outside-click-ref/package.json
+++ b/packages/outside-click-ref/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "_id": "@rooks/use-outside-click-ref@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
