--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "list"
   ],
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "_id": "@rooks/use-select@",
   "publishConfig": {
     "access": "public"
