--- a/packages/sessionstorage/package.json
+++ b/packages/sessionstorage/package.json
@@ -28,7 +28,7 @@
     "hooks",
     "session storage"
   ],
-  "version": "3.6.1-3.6.1-canary.4.0",
+  "version": "3.7.0-canary.0",
   "_id": "@rooks/use-sessionstorage@",
   "publishConfig": {
     "access": "public"
