--- a/.github/actions/ref-matches-branch/action.yml
+++ b/.github/actions/ref-matches-branch/action.yml
@@ -9,11 +9,8 @@ inputs:
 
 outputs:
   result:
-    descriptions: 1 or 0
+    description: 1 or 0
 
 runs:
   using: node12
   main: main.js
-
-branding:
-  icon: label
