--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -29,7 +29,7 @@
     "react-hooks.org",
     "counter hook"
   ],
-  "version": "3.7.0-canary.2",
+  "version": "3.7.0",
   "publishConfig": {
     "access": "public"
   },
