--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,16 +11,25 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js 10.x
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          version: 10.x
-      - name: Installs yarn
-        run: npm i -g yarn
-      - name: yarn install and build
-        run: |
-          yarn
-          yarn build:action
+          version: 12.x
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-  
+      - name: Install project dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
+        run: yarn
+      - name: yarn build
+        run: yarn build:action
       - name: test
         run: yarn test
       - name: deploy
