--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout the tag
         uses: actions/checkout@v1.0.0
       - name: Use Node.js 12.x
-        uses: actions/setup-node@v1.1.0
+        uses: actions/setup-node@v1
         with:
           version: 12.x
       - name: Get tag info
@@ -42,14 +42,23 @@ jobs:
         uses: ./.github/actions/ref-matches-branch
         with:
           name: master
-      - name: Installs yarn
-        run: npm i -g yarn
       - name: Install now
         run: now --version || npm i -g now
-      - name: yarn install and build
-        run: |
-          yarn
-          yarn build:action
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-  
+      - name: Install project dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
+        run: yarn
+      - name: yarn build
+        run: yarn build:action
       - name: Generate docusaurus
         if: steps.is_master.outputs.result == 1 && steps.tag_is_stable.outputs.result == 1
         run: yarn run readme-to-docs
