--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusaurus",
-  "version": "3.7.0",
+  "version": "4.0.0-canary.0",
   "private": true,
   "scripts": {
     "examples": "docusaurus-examples",
