--- a/packages/fullscreen/package.json
+++ b/packages/fullscreen/package.json
@@ -35,7 +35,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "3.7.0",
+  "version": "4.0.0-canary.0",
   "_id": "@rooks/use-fullscreen@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
