--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "3.7.0",
+  "version": "4.0.0-canary.0",
   "private": true,
   "description": "Storybook for hooks",
   "main": "index.js",
