--- a/packages/undo-state/package.json
+++ b/packages/undo-state/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "0.0.0",
+  "version": "4.0.0-canary.0",
   "_id": "@rooks/use-undo-state@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
