--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -30,7 +30,7 @@
     "window size",
     "window size hook"
   ],
-  "version": "3.7.0",
+  "version": "4.0.0-canary.0",
   "_id": "@rooks/use-window-size@",
   "private": false,
   "jest": {
