--- a/.github/actions/get-latest-tag/package.json
+++ b/.github/actions/get-latest-tag/package.json
@@ -3,6 +3,9 @@
   "name": "get-latest-tag",
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "build": "npm install && ncc build main.js"
+  },
   "dependencies": {
     "@actions/core": "^1.1.0"
   }
