--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "react-test-renderer": "16.9.0",
     "read-pkg-up": "7.0.0",
     "remark": "^13.0.0",
+    "remark-behead": "^2.3.3",
     "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-strip-badges": "^5.0.0",
     "replace-string": "2.0.0",
     "rollup": "1.20.3",
     "rollup-plugin-babel": "4.3.2",
@@ -88,6 +90,11 @@
     "shelljs": "0.8.3",
     "tslib": "1.9.3",
     "typescript": "3.4.1",
+    "unist-util-find": "^1.0.2",
+    "unist-util-find-all-after": "^3.0.2",
+    "unist-util-find-all-before": "^3.0.1",
+    "unist-util-find-all-between": "^2.1.0",
+    "unist-util-visit": "^2.0.3",
     "vfile-reporter": "^6.0.1",
     "webpack": "4.29.1",
     "webpack-cli": "3.2.1",
