--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "React hook for tracking clicks outside a ref",
   "name": "@rooks/use-outside-click",
-  "homepage": "https://stories.react-hooks.org/?path=/story/useoutsideclick--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-outside-click",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
