--- a/packages/boundingclientrect-ref/package.json
+++ b/packages/boundingclientrect-ref/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "A hook that tracks the boundingclientrect of an element. It returns a callbackRef so that the element node if changed is easily tracked. ",
   "name": "@rooks/use-boundingclientrect-ref",
-  "homepage": "https://stories.react-hooks.org/?path=/story/useboundingclientrectref--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-boundingclientrect-ref",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
