--- a/packages/countdown/package.json
+++ b/packages/countdown/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "Count down to a target timestamp and call callbacks every second (or provided peried)",
   "name": "@rooks/use-countdown",
-  "homepage": "https://stories.react-hooks.org/?path=/story/use-countdown--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-countdown",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
