--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for counter",
   "name": "@rooks/use-counter",
-  "homepage": "https://stories.react-hooks.org/?path=/story/usecounter--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-counter",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
