--- a/packages/interval/package.json
+++ b/packages/interval/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A react hook for using setInterval",
   "name": "@rooks/use-interval",
-  "homepage": "https://stories.react-hooks.org/?path=/story/useintervaldemo--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-interval",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
