--- a/packages/on-window-resize/package.json
+++ b/packages/on-window-resize/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React hook for window on resize event",
   "name": "@rooks/use-on-window-resize",
-  "homepage": "https://stories.react-hooks.org/?path=/story/use-on-window-resize--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-on-window-resize",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
