--- a/packages/visibility-sensor/package.json
+++ b/packages/visibility-sensor/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for visibility-sensor",
   "name": "@rooks/use-visibility-sensor",
-  "homepage": "https://stories.react-hooks.org/?path=/story/usevisibilitysensor--basic-example",
+  "homepage": "https://react-hooks.org/docs/use-visibility-sensor",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
