--- a/template/index.template
+++ b/template/index.template
@@ -1,7 +1,1 @@
-import { useState } from "react";
-
-function %name%() {
-  return null;
-}
-
-module.exports = %name%;
+export { %name% as default } from "shared/%name%";
