--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "remark-strip-badges": "^5.0.0",
     "replace-string": "2.0.0",
     "rollup": "^2.33.3",
+    "rollup-plugin-dts": "^1.4.14",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
