--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "source": "src/index.ts",
   "description": "Debounce hook for react",
   "name": "@rooks/use-debounce",
