--- a/packages/did-mount/package.json
+++ b/packages/did-mount/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "A React hooks package for componentDidMount",
   "name": "@rooks/use-did-mount",
   "homepage": "https://react-hooks.org/docs/use-did-mount",
