--- a/packages/intersection-observer-ref/package.json
+++ b/packages/intersection-observer-ref/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "license": "MIT",
   "description": "A hook to register an intersection observer listener",
   "name": "@rooks/use-intersection-observer-ref",
