--- a/packages/key/package.json
+++ b/packages/key/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "Keyboard key handler hook for react",
   "name": "@rooks/use-key",
   "homepage": "https://react-hooks.org/docs/use-key",
