--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "license": "MIT",
   "description": "A hook which allows to setup callbacks on multiple keypresses at the same time",
   "name": "@rooks/use-keys",
