--- a/packages/localstorage/package.json
+++ b/packages/localstorage/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "Local Storage hook for React",
   "name": "@rooks/use-localstorage",
   "homepage": "https://react-hooks.org/docs/use-localstorage",
