--- a/packages/mutation-observer-ref/package.json
+++ b/packages/mutation-observer-ref/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "license": "MIT",
   "description": "A hook that tracks mutations of an element. It returns a callbackRef.",
   "name": "@rooks/use-mutation-observer-ref",
