--- a/packages/mutation-observer/package.json
+++ b/packages/mutation-observer/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "license": "MIT",
   "description": "A React Hooks package for mutation-observer",
   "name": "@rooks/use-mutation-observer",
