--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "A React hook for window on scroll event",
   "name": "@rooks/use-on-window-scroll",
   "homepage": "https://react-hooks.org/docs/use-on-window-scroll",
