--- a/packages/outside-click-ref/package.json
+++ b/packages/outside-click-ref/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "license": "MIT",
   "description": "A hook that can track a click event outside a ref. Returns a callbackRef.",
   "name": "@rooks/use-outside-click-ref",
