--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "React hook for tracking clicks outside a ref",
   "name": "@rooks/use-outside-click",
   "homepage": "https://react-hooks.org/docs/use-outside-click",
