--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -8,7 +8,7 @@
   "main": "lib/rooks.browser.cjs.js",
   "jsnext:main": "lib/rooks.browser.esm.js",
   "module": "lib/rooks.browser.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/react-hooks-org/rooks.git"
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rimraf lib dist",
     "prebuild": "yarn clean",
-    "build": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c rollup.config.js",
+    "build": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c rollup.config.js && rollup -c dts.rollup.config.js && rm -rf dist",
     "lint": "eslint src test",
     "prepublish": "yarn run build"
   },
