--- a/packages/sessionstorage/package.json
+++ b/packages/sessionstorage/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "Session storage react hook. Easily manage session storage values",
   "name": "@rooks/use-sessionstorage",
   "homepage": "https://react-hooks.org/docs/use-sessionstorage",
