--- a/packages/undo-state/package.json
+++ b/packages/undo-state/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "license": "MIT",
   "description": "Drop in replacement for useState hook but with undo functionality.",
   "name": "@rooks/use-undo-state",
