--- a/packages/will-unmount/package.json
+++ b/packages/will-unmount/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "A React hook for componentWillUnmount lifecycle method",
   "name": "@rooks/use-will-unmount",
   "homepage": "https://react-hooks.org/docs/use-will-unmount",
