--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -2,7 +2,8 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
+
   "description": "A React Hooks package for window-size",
   "name": "@rooks/use-window-size",
   "homepage": "https://react-hooks.org/docs/use-window-size",
