--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -17,9 +17,7 @@
     "clean": "rimraf lib dist",
     "prebuild": "yarn clean",
     "build": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c rollup.config.js && rollup -c dts.rollup.config.js && rm -rf dist",
-    "lint": "eslint src test",
-    
-
+    "lint": "eslint src test" 
   },
   "bugs": {
     "url": "https://github.com/react-hooks-org/rooks/issues"
