--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -15,7 +15,7 @@
     "clean": "sh ../../scripts/clean.sh",
     "prebuild": "yarn clean",
     "build": "sh ../../scripts/build.sh",
-    "dts-build": "sh ../../scripts/dts-build.sh",
+    "dts-build": "sh ../../scripts/dts-build.sh"
     
 
   },
