--- a/template/package.json
+++ b/template/package.json
@@ -17,7 +17,7 @@
     "clean": "sh ../../scripts/clean.sh",
     "prebuild": "yarn clean",
     "build": "sh ../../scripts/build.sh",
-"dts-build": "sh ../../scripts/dts-build.sh",
+"dts-build": "sh ../../scripts/dts-build.sh"
 
     
 
