--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "babel-eslint": "10.0.3",
     "eslint": "5.12.1",
-    "eslint-plugin-react": "7.12.4"
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
