--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "prebuild": "lerna clean -y && yarn",
     "build:independent": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/build.sh",
     "build:independent-dts": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/dts-build.sh",
+    "build:independent:ci": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks --concurrency 4 -- sh ../../scripts/build.sh",
+    "build:independent-dts:ci": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks --concurrency 4 -- sh ../../scripts/dts-build.sh",
     "build:rooks": "lerna run --scope rooks build",
     "build:docs": "lerna run --scope docusaurus build",
     "build:shared": "lerna run --scope shared build",
-    "build:ci": "NODE_ENV=CI yarn run build:shared && yarn run build:independent && yarn run build:independent-dts && yarn run build:rooks",
+    "build:ci": "NODE_ENV=CI yarn run build:shared && NODE_ENV=CI yarn run build:independent:ci && NODE_ENV=CI yarn run build:independent-dts:ci && NODE_ENV=CI yarn run build:rooks",
     "build:action": "NODE_ENV=CI yarn run build:shared && yarn run build:independent && yarn run build:independent-dts && yarn run build:rooks",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
     "build:only": "yarn run build:shared --stream --parallel && yarn run build:independent --stream --parallel && yarn run build:independent-dts --stream --parallel && yarn run build:rooks  --stream --parallel",
