Compute package list (#301)
* Add computation feature

* Add computation

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "lerna run test --scope shared",
     "coverage": "lerna run test --stream --parallel -- --coverage",
     "create": "node helpers/create",
+    "compute-package-list": "node helpers/compute-package-list",
     "readme-to-docs": "lerna exec --scope=@rooks/* --scope=rooks --concurrency 1 --stream -- 'node ../../helpers/docs/index.js'",
     "bs": "lerna bootstrap",
     "prebuild": "lerna clean -y && yarn",
@@ -60,6 +61,7 @@
     "babel-preset-minify": "0.5.1",
     "browser-env": "3.2.5",
     "chalk": "2.4.2",
+    "execa": "^4.1.0",
     "glob": "^7.1.6",
     "inquirer": "7.0.0",
     "jest": "^26.6.3",
@@ -70,7 +72,9 @@
     "mdast-normalize-headings": "^2.0.0",
     "mdast-util-compact": "^3.0.0",
     "mdast-util-from-markdown": "^0.8.1",
+    "mdast-util-heading-range": "^2.1.5",
     "mdast-util-to-markdown": "^0.5.3",
+    "mdast-zone": "^4.0.1",
     "meow": "5.0.0",
     "mini-css-extract-plugin": "0.8.0",
     "ora": "4.0.3",
@@ -82,6 +86,7 @@
     "readline-sync": "^1.4.10",
     "remark": "^13.0.0",
     "remark-behead": "^2.3.3",
+    "remark-frontmatter": "^3.0.0",
     "remark-preset-lint-markdown-style-guide": "^4.0.0",
     "remark-strip-badges": "^5.0.0",
     "replace-string": "2.0.0",
