Feat/title card (#302)
* Update

* use command

* Bug fix

* Update

* Updates

* Add title cards for all packages

* Run every two days

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "coverage": "lerna run test --stream --parallel -- --coverage",
     "create": "node helpers/create",
     "compute-package-list": "node helpers/compute-package-list",
+    "update-title-card": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- 'node ../../helpers/update-title-card/index.js'",
     "readme-to-docs": "lerna exec --scope=@rooks/* --scope=rooks --concurrency 1 --stream -- 'node ../../helpers/docs/index.js'",
     "bs": "lerna bootstrap",
     "prebuild": "lerna clean -y && yarn",
@@ -60,6 +61,7 @@
     "babel-plugin-prismjs": "1.0.2",
     "babel-preset-minify": "0.5.1",
     "browser-env": "3.2.5",
+    "camel-case": "^4.1.1",
     "chalk": "2.4.2",
     "execa": "^4.1.0",
     "glob": "^7.1.6",
@@ -68,6 +70,7 @@
     "jest-localstorage-mock": "^2.4.3",
     "lerna": "^3.13.2",
     "lodash.capitalize": "4.2.1",
+    "lodash.truncate": "^4.4.2",
     "make-dir": "1.3.0",
     "mdast-normalize-headings": "^2.0.0",
     "mdast-util-compact": "^3.0.0",
